G_FILE_ATTRIBUTE_FILESYSTEM_USE_PREVIEW is not set consistently
Spin-off from nautilus!558 (comment 806675)
The current situation is summarized in the table below.
GVfsBackend | filesystem::remote | filesystem::use-preview |
---|---|---|
GVfsBackendAdmin | (copied from non-admin file) | (copied from non-admin file) |
GVfsBackendAfc | FALSE |
not set *1 |
GVfsBackendAfp | TRUE |
not set |
GVfsBackendAfpBrowse | TRUE |
not set |
GVfsBackendArchive | FALSE |
IF_LOCAL |
GVfsBackendBurn | FALSE |
not set |
GVfsBackendCdda | FALSE |
IF_LOCAL |
GVfsBackendComputer | FALSE |
not set |
GVfsBackendDav | TRUE |
not set |
GVfsBackendDnsSd | TRUE |
not set |
GVfsBackendFtp | TRUE |
not set |
GVfsBackendGoogle | TRUE |
not set |
GVfsBackendGphoto2 | FALSE |
NEVER *2
|
GVfsBackendLocalTest | FALSE |
not set |
GVfsBackendMtp | FALSE |
not set *3 |
GVfsBackendNfs | TRUE |
not set |
GVfsBackendRecent | FALSE |
IF_LOCAL |
GVfsBackendSftp | TRUE |
not set |
GVfsBackendSmb | TRUE |
not set |
GVfsBackendSmbBrowse | TRUE |
not set |
GVfsBackendTest | not set | not set |
GVfsBackendTrash | FALSE |
IF_LOCAL |
Edited by António Fernandes