mtp: Use G_FILESYSTEM_PREVIEW_TYPE_NEVER

gphoto2 does this since commit 983186766060ec82e260f8cd9a5160b93b2ae958

The same rationale applies to MTP.

https://gitlab.gnome.org/GNOME/gvfs/-/issues/497